# mvs-texturing

./: CMakeLists.txt
apps/texrecon/: CMakeLists.txt
cmake/: TexReconConfig.cmake.in
elibs/: CMakeLists.txt
libs/tex/: CMakeLists.txt
